--- a/index.html
+++ b/index.html
@@ -3,15 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colorful Background with Telegram Button</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Niet Sports is Live</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #1c1c1c; /* Light black background */
+            color: white;
+        }
+
+        .header {
+            background-color: #333;
+            text-align: center;
+            padding: 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 20px;
+        }
+
+        .card {
+            background-color: #444;
+            margin: 20px;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            width: 200px;
+            position: relative;
+        }
+
+        .card img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            border: 5px solid #666;
+        }
+
+        .card button {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .card button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <a href="https://t.me/yourusername" target="_blank" class="telegram-btn">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo" class="telegram-logo">
-            Contact me on Telegram
-        </a>
+
+    <div class="header">
+        Niet Sports is Live
     </div>
+
+    <div class="container">
+        <!-- Repeat this block 10 times with different content -->
+        <div class="card">
+            <img src="https://via.placeholder.com/100" alt="Image 1">
+            <button>Button 1</button>
+        </div>
+        <div class="card">
+            <img src="https://via.placeholder.com/100" alt="Image 2">
+            <button>Button 2</button>
+        </div>
+        <div class="card">
+            <img src="https://via.placeholder.com/100" alt="Image 3">
+            <button>Button 3</button>
+        </div>
+        <div class="card">
+            <img src="https://via.placeholder.com/100" alt="Image 4">
+            <button>Button 4</button>
+        </div>
+        <div class="card">
+            <img src="https://via.placeholder.com/100" alt="Image 5">
+            <button>Button 5</button>
+        </div>
+        <div class="card">
+            <img src="https://via.placeholder.com/100" alt="Image 6">
+            <button>Button 6</button>
+        </div>
+        <div class="card">
+            <img src="https://via.placeholder.com/100" alt="Image 7">
+            <button>Button 7</button>
+        </div>
+        <div class="card">
+            <img src="https://via.placeholder.com/100" alt="Image 8">
+            <button>Button 8</button>
+        </div>
+        <div class="card">
+            <img src="https://via.placeholder.com/100" alt="Image 9">
+            <button>Button 9</button>
+        </div>
+        <div class="card">
+            <img src="https://via.placeholder.com/100" alt="Image 10">
+            <button>Button 10</button>
+        </div>
+    </div>
+
 </body>
 </html>
