--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <div class="container">
         <!-- Repeat this block 10 times with different content -->
         <div class="card">
-            <img src="https://via.placeholder.com/100" alt="Image 1">
-            <button>Button 1</button>
+            <img src="content://media/external/downloads/1000113061" alt="Image 1">
+            <button>FANCODE</button>
         </div>
         <div class="card">
             <img src="https://via.placeholder.com/100" alt="Image 2">
