--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="container">
         <!-- Repeat this block 10 times with different content -->
         <div class="card">
-            <img src="content://media/external/downloads/1000113061" alt="Image 1">
+            <img src="FanCode_logo.svg.png" alt="Image 1">
             <button>FANCODE</button>
         </div>
         <div class="card">
