--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- Repeat this block 10 times with different content -->
         <div class="card">
             <img src="FanCode_logo.svg.png" alt="Image 1">
-            <button onclick="playStream('https://dai.google.com/ssai/event/2Pyg58-US5-T1xCBDPg1Zw/master.m3u8')"<button>FANCODE</button>
+            <button onclick="playStream('https://dai.google.com/ssai/event/2Pyg58-US5-T1xCBDPg1Zw/master.m3u8')">FANCODE</button>
         </div>
         <div class="card">
             <img src="https://via.placeholder.com/100" alt="Image 2">
