--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="card">
             <img src="https://via.placeholder.com/100" alt="Image 2">
-            <button>Button 2</button>
+            <button onclick="playStream('https://criccoder.pages.dev/Astro2')">FanCode Stream</button>
         </div>
         <div class="card">
             <img src="https://via.placeholder.com/100" alt="Image 3">
