--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="card">
             <img src="https://via.placeholder.com/100" alt="Image 2">
-            <button onclick="playStream('https://criccoder.pages.dev/Astro2')">FanCode Stream</button>
+            <button onclick="playStream('https://prod-sports-hin-cf.jiocinema.com/hls/live/2100320/uhd_akamai_ctv_avc_hin_indvsban_121024/index.m3u8')">IND vs BAN</button>
         </div>
         <div class="card">
             <img src="https://via.placeholder.com/100" alt="Image 3">
