--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <button onclick="playStream('https://dai.google.com/ssai/event/2Pyg58-US5-T1xCBDPg1Zw/master.m3u8')">FanCode Stream</button>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/100" alt="Image 2">
+            <img src="ind-vs-ban-live_4487c1adf98a43bf341570731cff632f.jpeg" alt="Image 2">
             <button onclick="playStream('https://prod-sports-hin-cf.jiocinema.com/hls/live/2100320/uhd_akamai_ctv_avc_hin_indvsban_121024/index.m3u8')">IND vs BAN</button>
         </div>
         <div class="card">
