--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="container">
         <div class="card">
-            <img src="https://via.placeholder.com/100" alt="Image 1">
+            <img src=""ind-vs-ban-live_4487c1adf98a43bf341570731cff632f.jpeg" alt="Image 1">
             <button onclick="playStream('https://prod-sports-hin-cf.jiocinema.com:443/hls/live/2100323/hd_akamai_androidmob_avc_hin_indvsban_121024/master_360p.m3u8')">IND vs BAN 360p</button>
         </div>
         <div class="card">
