--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="card">
             <img src=""ind-vs-ban-live_4487c1adf98a43bf341570731cff632f.jpeg" alt="Image 1">
-            <button onclick="playStream('https://prod-sports-hin-cf.jiocinema.com:443/hls/live/2100323/hd_akamai_androidmob_avc_hin_indvsban_121024/master_360p.m3u8')">IND vs BAN 360p</button>
+            <button onclick="playStream('http://1.1usd.tv:34000/ch235/mono.m3u8?token=1usdtv_kol218.FQLwEoHD4r5K2LNrRWktdO1g3jYg-zRf8aBHKZw6i5X5jYftfSvvtDJl7A7bUKlq')">INDw vs AUSw 360p</button>
         </div>
         <div class="card">
             <img src="ind-vs-ban-live_4487c1adf98a43bf341570731cff632f.jpeg" alt="Image 2">
