--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <button onclick="playStream('https://sonydaimenew.akamaized.net/hls/live/2094588/DAI04ME-V3/hdntl=exp=1729083466~acl=%2f*~id=f70892be-5e4d-49dc-b347-976138e16dd9~data=hdntl~hmac=f63679674cda541d2f687e1695214a1c61dda74e5bfd1b5c95bac35c4fbce326/master_500.m3u8')">WI vs SL 360p </button>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/100" alt="Image 4">
-            <button>Button 4</button>
+            <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpg" alt="Image 4">
+            <button onclick="playStream('http://flbl16.112421.net:8082/4151818/index.m3u8?token=FYCMQWAK8R')">Star sports hindi</button>
         </div>
         <div class="card">
             <img src="https://via.placeholder.com/100" alt="Image 5">
