--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="container">
         <div class="card">
-            <img src=""bgt.jpeg" alt="Image 1">
+            <img src=""https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/bgt.jpeg" alt="Image 1">
             <button onclick="playStream('https://5156.pricesaskeloadsc.com/tnt_1_gb/tracks-v1a1/mono.m3u8?token=cefd568cd26254272bdf1051197431f71b886a73-98-1732452998-1732416998')">INDIA VS AUSTRALIA</button>
         </div>
         <div class="card">
