--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
     <div class="container">
         <div class="card">
-            <img src=""https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/bgt.jpeg" alt="Image 1">
+            <img src=""https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="Image 1">
             <button onclick="playStream('https://5156.pricesaskeloadsc.com/tnt_1_gb/tracks-v1a1/mono.m3u8?token=cefd568cd26254272bdf1051197431f71b886a73-98-1732452998-1732416998')">INDIA VS AUSTRALIA</button>
         </div>
         <div class="card">
-            <img src="starsports.jpeg" alt="Image 2">
+            <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/starsports.jpeg" alt="Image 2">
             <button onclick="playStream('https://vkvsd176.okcdn.ru/hls/7521560431146.m3u8/sig/YxczNHve7f8/expires/1732458457125/srcIp/65.20.74.215/urls/45.136.20.45/clientType/14/srcAg/CHROME_ANDROID/mid/8817298385706/7521560431146_low/index.m3u8')">Star Sports हिंदी</button>
         </div>
         <div class="card">
