--- a/index.html
+++ b/index.html
@@ -3,42 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Stream By Niet</title>
+    <title>Live Stream and Telegram</title>
     <style>
         /* General Body Styling */
         body {
             font-family: 'Arial', sans-serif;
-            background: #f4f7f6;
+            background: linear-gradient(to right, #2c3e50, #3498db);
             margin: 0;
             padding: 0;
-            color: #333;
+            color: #fff;
         }
 
         /* Header */
         h1 {
             text-align: center;
             margin-top: 40px;
-            color: #2c3e50;
+            color: #fff;
+            font-size: 36px;
+            text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6);
         }
 
         /* Choose Channel Text */
         .choose-channel {
             text-align: center;
-            font-size: 24px;
+            font-size: 26px;
             font-weight: bold;
-            color: #2c3e50;
+            color: #fff;
             margin-top: 20px;
             z-index: 10;
-            margin-bottom: 20px; /* Added margin to create space */
+            margin-bottom: 30px;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
         }
 
         /* Video Player */
         #video-player {
             width: 80%;
-            max-width: 800px;
+            max-width: 900px;
             margin: 20px auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
             display: block; /* Show video by default */
         }
 
@@ -47,23 +50,26 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 20px;
-            margin-top: 40px;
+            gap: 30px;
+            margin-top: 50px;
         }
 
         /* Card Styling */
         .card {
-            background-color: #fff;
-            border-radius: 12px;
+            background-color: #34495e;
+            border-radius: 15px;
             padding: 20px;
-            width: 250px;
+            width: 270px;
             text-align: center;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease-in-out;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            background: linear-gradient(135deg, #f39c12, #e74c3c);
+            color: #fff;
         }
 
         .card:hover {
-            transform: scale(1.05);
+            transform: translateY(-10px);
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
         }
 
         .card img {
@@ -71,26 +77,31 @@
             height: 150px;
             object-fit: cover;
             border-radius: 8px;
+            margin-bottom: 15px;
         }
 
         /* Button Styling */
         button, .telegram-button {
-            padding: 12px 20px;
-            font-size: 16px;
-            margin-top: 15px;
-            border-radius: 8px;
+            padding: 14px 24px;
+            font-size: 18px;
+            margin-top: 20px;
+            border-radius: 10px;
             border: none;
             cursor: pointer;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            font-weight: bold;
+            width: 100%;
         }
 
         button {
-            background-color: #3498db;
+            background-color: #8e44ad;
             color: white;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
         }
 
         button:hover {
-            background-color: #2980b9;
+            background-color: #9b59b6;
+            transform: scale(1.05);
         }
 
         .telegram-button {
@@ -100,10 +111,12 @@
             display: inline-block;
             width: 100%;
             text-align: center;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
         }
 
         .telegram-button:hover {
             background-color: #007bb5;
+            transform: scale(1.05);
         }
 
         /* Responsive Design */
@@ -141,7 +154,7 @@
 
         <div class="card">
             <!-- Telegram Button -->
-            <a href="https://t.me/SportsLiveLink18" class="telegram-button" target="_blank">Join on Telegram</a>
+            <a href="https://t.me/YourTelegramLink" class="telegram-button" target="_blank">Join on Telegram</a>
         </div>
     </div>
 
