--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
 
         <div class="card">
-            <img src="https://raw.githubusercontent.com/AkashGillNiet/NietNietSportsSports/refs/heads/main/starsports.jpeg" alt="Star Sports">
+            <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
             <button onclick="playStream('https://vkvsd176.okcdn.ru/hls/7521560431146.m3u8/sig/YxczNHve7f8/expires/1732458457125/srcIp/65.20.74.215/urls/45.136.20.45/clientType/14/srcAg/CHROME_ANDROID/mid/8817298385706/7521560431146_low/index.m3u8')">Star Sports हिंदी</button>
         </div>
 
