--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <!-- Stream Cards -->
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="TNT SPORTS LIVE">
-            <button onclick="playStream('https://5156.pricesaskeloadsc.com/tnt_1_gb/tracks-v1a1/mono.m3u8?token=cefd568cd26254272bdf1051197431f71b886a73-98-1732452998-1732416998')">TNT SPORTS LIVE</button>
+            <button onclick="playStream('https://ottb.live.cf.ww.aiv-cdn.net/lhr-nitro/live/clients/dash/enc/wf8usag51e/out/v1/bd3b0c314fff4bb1ab4693358f3cd2d3/cenc.mpd')">TNT SPORTS LIVE</button>
         </div>
 
         <div class="card">
