--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 
         <!-- New Channels -->
         <div class="card">
-            <img src="https://via.placeholder.com/270x150?text=Sony+Sports+Live" alt="Sony Sports Live">
-            <button onclick="playStream('https://example.com/sony-sports.m3u8')">Sony Sports Live</button>
+            <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports Cricket">
+            <button onclick="playStream('https://muc2.mylife1.top:8088/live/webcricn04/playlist.m3u8?vidictid=200533566448&id=114607&pk=816ddaefc27f2eef1a127ea35e9fdbd65088923f3f9874a91a88e1ad20333bcb4714e1a6957611a7ae1b1238193ad8c9886eaabbb274466a83dd859af7ad5266')">Sky Sports Cricket</button>
         </div>
         <div class="card">
             <img src="https://via.placeholder.com/270x150?text=ESPN+Live" alt="ESPN Live">
