--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
             <button onclick="playStream('https://muc2.mylife1.top:8088/live/webcricn04/playlist.m3u8?vidictid=200533566448&id=114607&pk=816ddaefc27f2eef1a127ea35e9fdbd65088923f3f9874a91a88e1ad20333bcb4714e1a6957611a7ae1b1238193ad8c9886eaabbb274466a83dd859af7ad5266')">Sky Sports Cricket</button>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/270x150?text=ESPN+Live" alt="ESPN Live">
-            <button onclick="playStream('https://example.com/espn-live.m3u8')">ESPN Live</button>
+            <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow By Cricbuzz">
+            <button onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream9_240p/playlist.m3u8?vidictid=20053671546&id=34&pk=65836fcf6900acdd0c71ce2e968f5dde1581291bdcf65815745f796ea3282a344714e1a6957611a7ae1b1238193ad8c9886eaabbb274466a83dd859af7ad5266')">ESPN Live</button>
         </div>
         <div class="card">
             <img src="https://via.placeholder.com/270x150?text=Cricket+World+Cup" alt="Cricket World Cup">
