--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <!-- Original Channels -->
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="TNT SPORTS LIVE">
-            <button onclick="playStream('https://ottb.live.cf.ww.aiv-cdn.net/lhr-nitro/live/clients/dash/enc/wf8usag51e/out/v1/bd3b0c314fff4bb1ab4693358f3cd2d3/cenc.mpd')">TNT SPORTS LIVE</button>
+            <button onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream1_240p/playlist.m3u8?vidictid=200535858405&id=2&pk=65836fcf6900acdd0c71ce2e968f5dde1581291bdcf65815745f796ea3282a344714e1a6957611a7ae1b1238193ad8c9886eaabbb274466a83dd859af7ad5266')">TNT SPORTS LIVE</button>
         </div>
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
