--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <!-- New Channels -->
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports Cricket">
-            <button onclick="playStream('https://muc2.mylife1.top:8088/live/webcricn04/playlist.m3u8?vidictid=200533566448&id=114607&pk=816ddaefc27f2eef1a127ea35e9fdbd65088923f3f9874a91a88e1ad20333bcb4714e1a6957611a7ae1b1238193ad8c9886eaabbb274466a83dd859af7ad5266')">Sky Sports Cricket</button>
+            <button onclick="playStream('https://65.scjustfor.info/mobile/stream3_240p/playlist.m3u8?vidictid=200536888112&id=10&pk=5fbb89d30de555ba3a433e41406eb0ef378f6cbe216b0c1c50f50093c84c602d')">Sky Sports Cricket</button>
         </div>
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow By Cricbuzz">
