--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <!-- Original Channels -->
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="TNT SPORTS LIVE">
-            <button onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream4_240p/playlist.m3u8?vidictid=20053316949&id=14&pk=65836fcf6900acdd0c71ce2e968f5dde1581291bdcf65815745f796ea3282a344714e1a6957611a7ae1b1238193ad8c9886eaabbb274466a83dd859af7ad5266')">TNT SPORTS LIVE</button>
+            <button onclick="playStream('https://64.scjustfor.info/mobile/stream4_240p/playlist.m3u8?vidictid=200534986762&id=14&pk=5fbb89d30de555ba3a433e41406eb0ef378f6cbe216b0c1c50f50093c84c602d')">TNT SPORTS LIVE</button>
         </div>
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
