--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow By Cricbuzz">
-            <button onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream9_240p/playlist.m3u8?vidictid=20053671546&id=34&pk=65836fcf6900acdd0c71ce2e968f5dde1581291bdcf65815745f796ea3282a344714e1a6957611a7ae1b1238193ad8c9886eaabbb274466a83dd859af7ad5266')">ESPN Live</button>
+            <button onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream10_240p/playlist.m3u8?vidictid=200531701298&id=38&pk=0298437b0bd0069f9dc2696f62f9090b95bcda632485e0a810fe15bc3707bdb34714e1a6957611a7ae1b1238193ad8c9886eaabbb274466a83dd859af7ad5266')">Willow By Cricbuzz</button>
         </div>
         <div class="card">
             <img src="https://via.placeholder.com/270x150?text=Cricket+World+Cup" alt="Cricket World Cup">
