--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <!-- New Channels -->
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports Cricket">
-            <button onclick="playStream('https://58.scjustfor.info/mobile/stream3_240p/playlist.m3u8?vidictid=200538129693&id=10&pk=1d5f1814f5e75004ad2387d649a3d485eb87ab1463a330aab7d55d3dba7752fd')">Sky Sports Cricket</button>
+            <button onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream5_160p/playlist.m3u8?vidictid=200544185696&id=17&pk=e0a285b7cca07569ea484aef20eb16c34e994e9abe3a974430a1c35ed25ac82a1911bbd1b5347378a15182dc1c30c0126a00ab4b4624862e9a3e9323a784e1d0')">Sky Sports Cricket</button>
         </div>
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow By Cricbuzz">
