--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
             <button onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream2_160p/playlist.m3u8?vidictid=200546183085&id=5&pk=e0a285b7cca07569ea484aef20eb16c34e994e9abe3a974430a1c35ed25ac82a1911bbd1b5347378a15182dc1c30c0126a00ab4b4624862e9a3e9323a784e1d0')">Willow By Cricbuzz</button>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/270x150?text=Cricket+World+Cup" alt="Cricket World Cup">
-            <button onclick="playStream('https://example.com/cricket-worldcup.m3u8')">Cricket World Cup</button>
+            <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="Cricket World Cup">
+            <button onclick="playStream('https://off8.jismhaitokia.com:999/hls/ptvpk.m3u8?md5=ks2gyIwOKnNPHbchqBAESg&expires=1732679792')">Cricket World Cup</button>
         </div>
 
         <!-- Telegram Button -->
