--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow By Cricbuzz">
-            <button onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream2_160p/playlist.m3u8?vidictid=200546183085&id=5&pk=e0a285b7cca07569ea484aef20eb16c34e994e9abe3a974430a1c35ed25ac82a1911bbd1b5347378a15182dc1c30c0126a00ab4b4624862e9a3e9323a784e1d0')">Willow By Cricbuzz</button>
+            <button onclick="playStream('https://59.scjustfor.info/mobile/stream3_240p/playlist.m3u8?vidictid=200543397328&id=10&pk=df2db0c320eb177de3f932c83e679744cb766056a52e989723a2b888a3b4923e')">Willow By Cricbuzz</button>
         </div>
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="Cricket World Cup">
