--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="Cricket World Cup">
-            <button onclick="playStream('https://off1.jismhaitokia.com:999/hls/ptvpk.m3u8?md5=OcVLic9CT4-6us84RgMpzA&expires=1732724899')">Cricket World Cup</button>
+            <button onclick="playStream('https://stream.crichd.sc/update/fox501.php')">Ptv Sports</button>
         </div>
 
         <!-- Telegram Button -->
