--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow By Cricbuzz">
-            <button onclick="playStream('https://59.scjustfor.info/mobile/stream3_240p/playlist.m3u8?vidictid=200546809736&id=10&pk=8b4051c8ecebdd55ef10874ad3426d9eb9254afdb8b9520192292af9b65574d9')">Willow By Cricbuzz</button>
+            <button onclick="playStream('https://64.scjustfor.info/mobile/stream3_240p/playlist.m3u8?id=10&pk=1929cc3f382117c6a381fc13d7b4889d9afdcdc0946b980f9b4b75954ecf5bd2')">Willow By Cricbuzz</button>
         </div>
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="Cricket World Cup">
