--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <!-- Original Channels -->
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="TNT SPORTS LIVE">
-            <button onclick="playStream('https://58.scjustfor.info/mobile/stream4_240p/playlist.m3u8?vidictid=200535382581&id=14&pk=1d5f1814f5e75004ad2387d649a3d485eb87ab1463a330aab7d55d3dba7752fd')">TNT SPORTS LIVE</button>
+            <button onclick="playStream('https://puc2.mylife1.top:8088/live/webcricp01/playlist.m3u8?vidictid=200557839649&id=113431&pk=32daf8204eea6d84bfa3c16e78e3a76b662439d7bbe5bb5042df0f2bbfabec89a937764a43280ebdf2c3186053eed66702633b87a438e64896fc420ed43db2eb')">TNT SPORTS LIVE</button>
         </div>
         <div class="card">
             <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
