--- a/index.html
+++ b/index.html
@@ -3,199 +3,167 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Stream and Telegram</title>
+    <title>Circle Channel Design</title>
     <style>
-        /* General Body Styling */
         body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #2c3e50, #3498db);
+            font-family: Arial, sans-serif;
+            background-color: #1e1e1e; /* हल्का काला */
             margin: 0;
             padding: 0;
-            color: #fff;
+            color: #fff; /* टेक्स्ट को सफेद */
         }
 
-        /* Header */
         h1 {
             text-align: center;
-            margin-top: 40px;
             color: #fff;
-            font-size: 36px;
-            text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6);
+            margin: 20px 0;
         }
 
-        /* Choose Channel Text */
-        .choose-channel {
-            text-align: center;
-            font-size: 26px;
-            font-weight: bold;
-            color: #fff;
-            margin-top: 20px;
-            z-index: 10;
-            margin-bottom: 30px;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-        }
-
-        /* Video Player */
         #video-player {
+            display: block;
             width: 80%;
             max-width: 900px;
             margin: 20px auto;
-            border-radius: 15px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-            display: block;
+            border: 2px solid #333;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
         }
 
-        /* Container for cards */
-        .container {
+        .channel-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 30px;
-            margin-top: 50px;
+            gap: 20px;
+            margin: 30px auto;
+            max-width: 1200px;
         }
 
-        /* Card Styling */
-        .card {
-            background-color: #34495e;
-            border-radius: 15px;
-            padding: 20px;
-            width: 270px;
+        .channel-card {
             text-align: center;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            background: linear-gradient(135deg, #1abc9c, #16a085);
-            color: #fff;
+            width: 150px;
         }
 
-        .card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
+        .channel-image {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            margin: 0 auto;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            transition: transform 0.3s ease;
         }
 
-        .card img {
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 8px;
-            margin-bottom: 15px;
+        .channel-image:hover {
+            transform: scale(1.1);
         }
 
-        /* Button Styling */
-        button {
-            padding: 14px 24px;
-            font-size: 18px;
-            margin-top: 20px;
-            border-radius: 10px;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.3s ease;
+        .channel-name {
+            margin-top: 10px;
+            padding: 10px;
+            background-color: #3498db;
+            color: white;
+            border-radius: 5px;
             font-weight: bold;
-            width: 100%;
-            background-color: #e67e22;
-            color: white;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            cursor: pointer;
         }
 
-        button:hover {
-            background-color: #d35400;
-            transform: scale(1.05);
-        }
-
-        /* Telegram Button */
-        .telegram-button {
+        .channel-name:hover {
             background-color: #2980b9;
-            color: white;
-            text-decoration: none;
-            display: inline-block;
-            text-align: center;
-            width: auto;
-            margin: 10px 0;
-            padding: 12px 20px;
-            border-radius: 8px;
-            transition: background-color 0.3s ease, transform 0.3s ease;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
         }
 
-        .telegram-button:hover {
-            background-color: #1f6fa4;
+        .telegram-button {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .telegram-link {
+            display: inline-block;
+            background-color: #0088cc;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 8px;
+            font-weight: bold;
+            text-decoration: none;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+        }
+
+        .telegram-link:hover {
+            background-color: #006f9e;
             transform: scale(1.05);
         }
 
-        /* Black background for the area below Telegram Button */
-        .telegram-footer {
-            background-color: #000;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            margin-top: 40px;
-        }
-
-        /* Responsive Design */
         @media (max-width: 768px) {
-            .container {
-                flex-direction: column;
-                align-items: center;
+            .channel-card {
+                width: 100px;
             }
         }
     </style>
 </head>
 <body>
-
     <h1>Live Stream by Niet</h1>
 
-    <!-- Choose Channel Text -->
-    <div class="choose-channel">
-        <strong>Choose a Channel from Below</strong>
-    </div>
-
-    <!-- Video player -->
+    <!-- Video Player -->
     <video id="video-player" controls></video>
 
-    <div class="container">
-        <!-- Original Channels -->
-        <div class="card">
-            <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="TNT SPORTS LIVE">
-            <button onclick="playStream('https://puc2.mylife1.top:8088/live/webcricp01/playlist.m3u8?vidictid=200557839649&id=113431&pk=32daf8204eea6d84bfa3c16e78e3a76b662439d7bbe5bb5042df0f2bbfabec89a937764a43280ebdf2c3186053eed66702633b87a438e64896fc420ed43db2eb')">TNT SPORTS LIVE</button>
+    <!-- Channel Cards -->
+    <div class="channel-container">
+        <div class="channel-card">
+            <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="TNT Sports">
+            <div class="channel-name" onclick="playStream('https://puc2.mylife1.top:8088/live/webcricp01/playlist.m3u8')">TNT Sports</div>
         </div>
-        <div class="card">
-            <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
-            <button onclick="playStream('https://vkvsd184.okcdn.ru/hls/7533621545514.m3u8/sig/eTtQ_L2Sq5M/srcIp/139.84.172.25/urls/45.136.21.81/expires/1733088595327/clientType/13/srcAg/CHROME/fromCache/1/mid/8877188524842/id/7533621545514/video.m3u8?p')">Star Sports हिंदी</button>
+        <div class="channel-card">
+            <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
+            <div class="channel-name" onclick="playStream('https://vkvsd184.okcdn.ru/hls/7533621545514.m3u8/sig/eTtQ_L2Sq5M/srcIp/139.84.172.25/urls/45.136.21.81/expires/1733088595327/clientType/13/srcAg/CHROME/fromCache/1/mid/8877188524842/id/7533621545514/video.m3u8?p')">Star Sports</div>
         </div>
-
-        <!-- New Channels -->
-        <div class="card">
-            <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports Cricket">
-            <button onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream5_160p/playlist.m3u8?vidictid=200544185696&id=17&pk=e0a285b7cca07569ea484aef20eb16c34e994e9abe3a974430a1c35ed25ac82a1911bbd1b5347378a15182dc1c30c0126a00ab4b4624862e9a3e9323a784e1d0')">Sky Sports Cricket</button>
+        <div class="channel-card">
+            <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
+            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream5_160p/playlist.m3u8')">Sky Sports</div>
         </div>
-        <div class="card">
-            <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow By Cricbuzz">
-            <button onclick="playStream('https://64.scjustfor.info/mobile/stream2_240p/playlist.m3u8?id=6&pk=e8e56b998df38e0e511095ae1c7686e447c923f0a11faf230bae08e86f714d2f')">Willow By Cricbuzz</button>
+        <div class="channel-card">
+            <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow Cricket">
+            <div class="channel-name" onclick="playStream('https://64.scjustfor.info/mobile/stream2_240p/playlist.m3u8')">Willow Cricket</div>
         </div>
-        <div class="card">
-            <img src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="Cricket World Cup">
-            <button onclick="playStream('https://stream.crichd.sc/update/fox501.php')">Ptv Sports</button>
+        <div class="channel-card">
+            <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="PTV Sports">
+            <div class="channel-name" onclick="playStream('https://stream.crichd.sc/update/fox501.php')">PTV Sports</div>
         </div>
-
-        <!-- Telegram Button -->
-        <div class="card">
-            <a href="https://t.me/SportsLiveLink18" class="telegram-button" target="_blank">Join on Telegram</a>
+        <div class="channel-card">
+            <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 6">
+            <div class="channel-name" onclick="playStream('YOUR_LINK_6')">Channel 6</div>
+        </div>
+        <div class="channel-card">
+            <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 7">
+            <div class="channel-name" onclick="playStream('YOUR_LINK_7')">Channel 7</div>
+        </div>
+        <div class="channel-card">
+            <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 8">
+            <div class="channel-name" onclick="playStream('YOUR_LINK_8')">Channel 8</div>
+        </div>
+        <div class="channel-card">
+            <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 9">
+            <div class="channel-name" onclick="playStream('YOUR_LINK_9')">Channel 9</div>
+        </div>
+        <div class="channel-card">
+            <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 10">
+            <div class="channel-name" onclick="playStream('YOUR_LINK_10')">Channel 10</div>
         </div>
     </div>
 
-    <div class="telegram-footer">
-        <p>&copy; 2024 Live Stream by Niet. All Rights Reserved.</p>
+    <!-- Telegram Button -->
+    <div class="telegram-button">
+        <a href="https://t.me/SportsLiveLink18" class="telegram-link" target="_blank">Join on Telegram</a>
     </div>
 
     <script>
         function playStream(url) {
             var player = document.getElementById('video-player');
-            player.style.display = 'block'; // Show the video player
-            player.src = url; // Set the video URL
+            player.style.display = 'block';
+            player.src = url;
             player.play().catch((error) => {
-                console.error("Error playing the video:", error);
+                console.error("Error playing video:", error);
             });
         }
     </script>
-
 </body>
 </html>
