--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="PTV Sports">
-            <div class="channel-name" onclick="playStream('https://stream.crichd.sc/update/fox501.php')">PTV Sports</div>
+            <div class="channel-name" onclick="playStream('https://58.scjustfor.info/mobile/stream5_240p/playlist.m3u8?vidictid=200552282575&id=18&pk=5fbb89d30de555ba3a433e41406eb0ef378f6cbe216b0c1c50f50093c84c602d')">PTV Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 6">
