--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
             <div class="channel-name" onclick="playStream('https://58.scjustfor.info/mobile/stream5_240p/playlist.m3u8?vidictid=200552282575&id=18&pk=5fbb89d30de555ba3a433e41406eb0ef378f6cbe216b0c1c50f50093c84c602d')">PTV Sports</div>
         </div>
         <div class="channel-card">
-            <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 6">
-            <div class="channel-name" onclick="playStream('YOUR_LINK_6')">Channel 6</div>
+            <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/FanCode_logo.svg.png" alt="Fancode">
+            <div class="channel-name" onclick="playStream('https://dai.fancode.com/primary/112611_english_hls_5320ta-di/index.m3u8')">Fancode</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 7">
