--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             <div class="channel-name" onclick="playStream('https://dai.fancode.com/primary/112611_english_hls_5320ta-di/index.m3u8')">Fancode</div>
         </div>
         <div class="channel-card">
-            <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 7">
-            <div class="channel-name" onclick="playStream('YOUR_LINK_7')">Channel 7</div>
+            <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/jio-cinema.png" alt="Jio Cinema">
+            <div class="channel-name" onclick="playStream('https://prod-sports-eng-cf.jiocinema.com/hls/live/2100306/hd_akamai_merged_avc_eng_cricket_m7_281124/tv_master.m3u8')">Jio Cinema</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 8">
