--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
-            <div class="channel-name" onclick="playStream('https://vkvsd184.okcdn.ru/hls/7533621545514.m3u8/sig/eTtQ_L2Sq5M/srcIp/139.84.172.25/urls/45.136.21.81/expires/1733088595327/clientType/13/srcAg/CHROME/fromCache/1/mid/8877188524842/id/7533621545514/video.m3u8?p')">Star Sports</div>
+            <div class="channel-name" onclick="playStream('https://vkvsd63.okcdn.ru/cmaf/7381061929703/sig/AwEx0Q8WwB4/srcIp/3.110.176.247/urls/185.226.53.64/expires/1733264148452/clientType/13/srcAg/CHROME/fromCache/1/mid/8776469523431/id/7381061929703/get/COfX5PK2_wEQ6AcYAzIICgYIgAUQ6AI6BAjE2AJaBggBEAMoF2ICCBD6X-9MgR7o-w/track.m3u8')">Star Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
