--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="channel-container">
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="TNT Sports">
-            <div class="channel-name" onclick="playStream('https://puc2.mylife1.top:8088/live/webcricp01/playlist.m3u8')">TNT Sports</div>
+            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream3_160p/playlist.m3u8?vidictid=200552515513&id=9&pk=1b3dab3725d9caf21b5925142a92c23497fcb476e34dfd1d553f4a0d880d56cca937764a43280ebdf2c3186053eed66702633b87a438e64896fc420ed43db2eb')">TNT Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
@@ -118,11 +118,11 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
-            <div class="channel-name" onclick="playStream('https://58.scjustfor.info/mobile/stream3_240p/playlist.m3u8?vidictid=200555178382&id=10&pk=5fbb89d30de555ba3a433e41406eb0ef378f6cbe216b0c1c50f50093c84c602d')">Sky Sports</div>
+            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream5_160p/playlist.m3u8?vidictid=200553997976&id=17&pk=1b3dab3725d9caf21b5925142a92c23497fcb476e34dfd1d553f4a0d880d56cca937764a43280ebdf2c3186053eed66702633b87a438e64896fc420ed43db2eb')">Sky Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow Cricket">
-            <div class="channel-name" onclick="playStream('https://64.scjustfor.info/mobile/stream2_240p/playlist.m3u8')">Willow Cricket</div>
+            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream4_240p/playlist.m3u8?vidictid=20055660655&id=14&pk=1b3dab3725d9caf21b5925142a92c23497fcb476e34dfd1d553f4a0d880d56cca937764a43280ebdf2c3186053eed66702633b87a438e64896fc420ed43db2eb')">Willow Cricket</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="PTV Sports">
