--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="PTV Sports">
-            <div class="channel-name" onclick="playStream('https://58.scjustfor.info/mobile/stream5_240p/playlist.m3u8?vidictid=200552282575&id=18&pk=5fbb89d30de555ba3a433e41406eb0ef378f6cbe216b0c1c50f50093c84c602d')">PTV Sports</div>
+            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream2_240p/playlist.m3u8?vidictid=200559230886&id=6&pk=1b3dab3725d9caf21b5925142a92c23497fcb476e34dfd1d553f4a0d880d56cca937764a43280ebdf2c3186053eed66702633b87a438e64896fc420ed43db2eb')">PTV Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/FanCode_logo.svg.png" alt="Fancode">
