--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
-            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream5_160p/playlist.m3u8?vidictid=200553997976&id=17&pk=1b3dab3725d9caf21b5925142a92c23497fcb476e34dfd1d553f4a0d880d56cca937764a43280ebdf2c3186053eed66702633b87a438e64896fc420ed43db2eb')">Sky Sports</div>
+            <div class="channel-name" onclick="playStream('http://gcp-dash.ngslbs.com/TVD024/index.mpd')">Sky Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow Cricket">
