--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/jio-cinema.png" alt="Jio Cinema">
-            <div class="channel-name" onclick="playStream('https://prod-sports-eng-cf.jiocinema.com/hls/live/2100306/hd_akamai_merged_avc_eng_cricket_m7_281124/tv_master.m3u8')">Jio Cinema</div>
+            <div class="channel-name" onclick="playStream('https://prod-sports-hin-gm.jiocinema.com/hls/live/2100328/hd_akamai_merged_avc_isl_hin_m1291124/master.m3u8')">Jio Cinema</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 8">
