--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             <div class="channel-name" onclick="playStream('https://prod-sports-hin-gm.jiocinema.com/hls/live/2100328/hd_akamai_merged_avc_isl_hin_m1291124/master.m3u8')">Jio Cinema</div>
         </div>
         <div class="channel-card">
-            <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 8">
-            <div class="channel-name" onclick="playStream('YOUR_LINK_8')">Channel 8</div>
+            <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(10).jpeg" alt="Sony Liv">
+            <div class="channel-name" onclick="playStream('https://dai.google.com/ssai/event/RLuKHGGZS72Dss9NPWaldw/master.m3u8')">Sony Liv</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://via.placeholder.com/100" alt="Channel 9">
