--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/FanCode_logo.svg.png" alt="Fancode">
-            <div class="channel-name" onclick="playStream('https://dai.fancode.com/linear/hls/event/X9_rmB-3SHKy62D32eD7jw/master.m3u8')">Fancode</div>
+            <div class="channel-name" onclick="playStream('https://dai.fancode.com/primary/113724_english_hls_5464ta-di/index.m3u8')">Fancode</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/jio-cinema.png" alt="Jio Cinema">
-            <div class="channel-name" onclick="playStream('https://prod-sports-hin-gm.jiocinema.com/hls/live/2100328/hd_akamai_merged_avc_isl_hin_m1291124/master.m3u8')">Jio Cinema</div>
+            <div class="channel-name" onclick="playStream('https://prod-sports-eng-cf.jiocinema.com/hls/live/2100306/hd_akamai_merged_avc_eng_cricket_m7_301124/master.m3u8')">Jio Cinema</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(10).jpeg" alt="Sony Liv">
