--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow Cricket">
-            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream4_160p/playlist.m3u8?vidictid=200578156521&id=13&pk=7f06d47c3d420484315a44b1f6ec95a1739daddda29ff56b9d8a2522c02e289343d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">Willow Cricket</div>
+            <div class="channel-name" onclick="playStream('https://mut1.mylife1.top:8088/live/webcrict20/playlist.m3u8?vidictid=200576786109&id=118106&pk=7f06d47c3d420484315a44b1f6ec95a1739daddda29ff56b9d8a2522c02e289343d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">Willow Cricket</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="PTV Sports">
