--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="channel-container">
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="TNT Sports">
-            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream3_240p/playlist.m3u8?vidictid=200568899084&id=10&pk=114426c6739d11876d02b9c5395d13b7da94c2ccd62d2650fb3a506138108016bbb85853654c8215c9c550afaf087f21798ec8eac07a9da998f95578f7366fe6')">TNT Sports</div>
+            <div class="channel-name" onclick="playStream('https://muc1.mylife1.top:8088/live/webcricp01/playlist.m3u8?vidictid=200577627676&id=113431&pk=7f06d47c3d420484315a44b1f6ec95a1739daddda29ff56b9d8a2522c02e289343d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">TNT Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
