--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
-            <div class="channel-name" onclick="playStream('http://gcp-dash.ngslbs.com/TVD024/index.mpd')">Sky Sports</div>
+            <div class="channel-name" onclick="playStream('https://muc1.mylife1.top:8088/live/webcrice09/playlist.m3u8?vidictid=20057700713&id=116730&pk=7f06d47c3d420484315a44b1f6ec95a1739daddda29ff56b9d8a2522c02e289343d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">Sky Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow Cricket">
