--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="channel-container">
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(6).jpeg" alt="TNT Sports">
-            <div class="channel-name" onclick="playStream('https://muc1.mylife1.top:8088/live/webcricp01/playlist.m3u8?vidictid=200577627676&id=113431&pk=7f06d47c3d420484315a44b1f6ec95a1739daddda29ff56b9d8a2522c02e289343d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">TNT Sports</div>
+            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream3_240p/playlist.m3u8?vidictid=200578177310&id=10&pk=3de1b7e198aadb7636c6ba7db02144efe7ee5e7c242f70fad1c98a4ae53e01de43d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">TNT Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
@@ -122,7 +122,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow Cricket">
-            <div class="channel-name" onclick="playStream('https://mut1.mylife1.top:8088/live/webcrict20/playlist.m3u8?vidictid=200576786109&id=118106&pk=7f06d47c3d420484315a44b1f6ec95a1739daddda29ff56b9d8a2522c02e289343d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">Willow Cricket</div>
+            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream9_240p/playlist.m3u8?vidictid=200576063917&id=34&pk=3de1b7e198aadb7636c6ba7db02144efe7ee5e7c242f70fad1c98a4ae53e01de43d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">Willow Cricket</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="PTV Sports">
