--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(9).jpeg" alt="PTV Sports">
-            <div class="channel-name" onclick="playStream('https://mut1.mylife1.top:8088/live/webcricm04/playlist.m3u8?vidictid=200576288216&id=114515&pk=7f06d47c3d420484315a44b1f6ec95a1739daddda29ff56b9d8a2522c02e289343d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">PTV Sports</div>
+            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream3_240p/playlist.m3u8?vidictid=200575118756&id=10&pk=c96b31ff1c5ef91f50feef0aa40d7946d7209ba6bb6c117a42147525af791a4f43d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">PTV Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/FanCode_logo.svg.png" alt="Fancode">
