--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/images%20(7).jpeg" alt="Star Sports">
-            <div class="channel-name" onclick="playStream('http://vps.its-nayeemparvez.xyz/StarSports2HD/video.m3u8')">Star Sports</div>
+            <div class="channel-name" onclick="playStream('https://vkvsd55.okcdn.ru/cmaf/7381061929703/sig/m_HzjZcG9pE/expires/1733010451785/srcIp/13.203.23.125/urls/185.226.55.81/clientType/13/srcAg/CHROME/mid/8776469523431/get/COfX5PK2_wEQ6AcYBTIICgYIgAoQ0AU6BAjE2AJaBggDEAIoF2ICCBgomeWtA-sOxw/track.m3u8')">Star Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
