--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/596cd9eb7fa44cb082008078.format-webp.width-1440_bJ7uveKWAfmUPxvP.webp" alt="Sky Sports">
-            <div class="channel-name" onclick="playStream('https://tes1.mylife1.top:8088/mobile/stream5_240p/playlist.m3u8?vidictid=20057303193&id=18&pk=c4c444c85d8b238700b452c8e69a581c914ef6babfd38a00b3e8c9d407b40fa543d523010fae682b2229b13dc1ba240ef54be102e2dce5b645854feca9098f94')">Sky Sports</div>
+            <div class="channel-name" onclick="playStream('https://64.scjustfor.info/mobile/stream6_240p/playlist.m3u8?vidictid=200583445222&id=21&pk=d0b8f672535bc1ba268906ca5fc8104947bfd07bb0b8f4f72642c580708a4e05')">Sky Sports</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/3f54a65a0eee4b95612e18e39a85f95a0ecc2202cebe3ca664b70d86f1036378.webp" alt="Willow Cricket">
