--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/FanCode_logo.svg.png" alt="Fancode">
-            <div class="channel-name" onclick="playStream('https://dai.fancode.com/primary/113724_english_hls_5464ta-di/index.m3u8')">Fancode</div>
+            <div class="channel-name" onclick="playStream('https://dai.google.com/linear/hls/event/CsqmxoIuTF-UFGAoYvSEJA/master.m3u8')">Fancode</div>
         </div>
         <div class="channel-card">
             <img class="channel-image" src="https://raw.githubusercontent.com/AkashGillNiet/NietSports/refs/heads/main/jio-cinema.png" alt="Jio Cinema">
